# dp-pk-params

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  README.md  pyproject.toml  setup.sh
data/: README.md  TES_pkshort_max200_RenJab-S20.txt  TRA_HotKnots_max200_S80P.txt
notebooks/: test.ipynb
notes/: phase1_recap.md  phase2_recap.md
params/: README.md  rna_pk_DirksPierce09_HotKnotsV2.json
scripts/: count_features.py  download_data.py  estimate.py  evaluate.py
src/data/: clean.py  hotknots_reader.py  parse.py
src/energy/: dp_energy.py
src/estimation/: README.md
src/evaluation/: fmeasure.py
src/features/: pk_features.py
src/params/: mt_params.py  pk_params.py
tests/: test_dp_energy.py  test_parse.py  test_pk_features.py  test_pk_params.py
