[project]
name = "dp-pk-params"
version = "0.1.0"
description = "ML re-estimation of the 11 Dirks-Pierce pseudoknot energy parameters"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]
# No deep-learning framework: estimation is max-margin / constrained optimization.

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.1", "black>=23.0", "mypy>=1.5"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
extraPaths = ["."]

